Fix: Frame not filling full space with flowLayout=true when module menu hidden, causing lists overflow

--- a/openxava/src/main/resources/META-INF/resources/xava/style/base.css
+++ b/openxava/src/main/resources/META-INF/resources/xava/style/base.css
@@ -1670,7 +1670,7 @@ input[type="button"] {
 }
 
 .ox-detail.ox-flow-layout, .ox-active-section > .ox-flow-layout { 
-	width: calc(100vw - 210px); 
+	width: calc(100% - 10px); 
 	margin-top: 5px; 
 }
 
